syntax = "proto3";

package order.v1;

import "validate/validate.proto";

option go_package = "order/api/order/v1;v1";

service Order {
  rpc CreateOrder(OrderRequest) returns (OrderInfoResponse); // 创建订单
}

message CartItem {
  int64 cartId = 1;
  int64 skuId = 2;
  int64 skuNum = 3;
}

message OrderRequest {
  int64 id = 1;
  int64 userId = 2 [(validate.rules).int64 = {gt:0}];
  int64 address = 3 [(validate.rules).int64 = {gt:0}];
  repeated CartItem cartItem = 4; //  购物车购买和直接购买
}

message OrderInfoResponse {
  int32 id = 1;
  int32 userId = 2;
  string orderSn = 3;
  string payType = 4;
  string status = 5;
  string post = 6;
  float total = 7;
  string address = 8;
  string name = 9;
  string mobile = 10;
  string addTime = 11;
}

